fix invisible titles for module items locked by sequence
the css rule to display the non-link title ("locked_title")
was not being applied because the default rule was more
specific

test plan:
 - create a module with multiple items
 - add a completion requirement to (at least) the first item
 - view the modules page as a student
 - the later module items should still have titles

fixes CNVS-10078

Reviewed-on: https://gerrit.instructure.com/27992
Tested-by: Jenkins <jenkins@instructure.com>
Product-Review: Bracken Mosbacker <bracken@instructure.com>
QA-Review: Matt Fairbourn <mfairbourn@instructure.com>

--- a/app/stylesheets/g_context_modules.sass
+++ b/app/stylesheets/g_context_modules.sass
@@ -215,13 +215,14 @@ $context_module_bg_color: #f2f3f4
     .incomplete_item_icon
       display: none
   &.after_current_position
-    +opacity(0.5)
-    .title 
-      display: none
-    .locked_title 
-      display: inline-block
-    .completion_requirement
-      color: #aaa
+    .item_name
+      +opacity(0.5)
+      .title
+        display: none
+      .locked_title
+        display: inline-block
+      .completion_requirement
+        color: #aaa
   .module_item_icons
     vertical-align: top
     padding-top: 2px
